metaSpaceTest